[gd_scene load_steps=4 format=3 uid="uid://c4l2xx0baajk5"]

[ext_resource type="Texture2D" uid="uid://ra6j4r5vx4v0" path="res://assets.png" id="1_c15h4"]
[ext_resource type="Script" path="res://entities/space_man_boss.gd" id="1_rfevd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r75ul"]
radius = 744.172

[node name="SpaceManBoss" type="Node2D"]
script = ExtResource("1_rfevd")

[node name="EyesUngry" type="Sprite2D" parent="."]
position = Vector2(0.999996, -24)
scale = Vector2(1.7, 1.7)
texture = ExtResource("1_c15h4")
region_enabled = true
region_rect = Rect2(34.957, 2394.79, 107.634, 71.3755)

[node name="EyesCry" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.999996, -24)
scale = Vector2(1.7, 1.7)
texture = ExtResource("1_c15h4")
region_enabled = true
region_rect = Rect2(33.6989, 2498.29, 119.892, 87.7026)

[node name="Helmet" type="Sprite2D" parent="."]
texture = ExtResource("1_c15h4")
region_enabled = true
region_rect = Rect2(223.456, 2184.64, 378.182, 416.364)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r75ul")

[node name="Area2DCollision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2DCollision"]
polygon = PackedVector2Array(-176, 48, -176, -88, -136, -144, -120, -136, -96, -168, -32, -192, 40, -192, 88, -168, 120, -136, 168, -136, 176, -64, 144, -56, 144, 16, 128, 56, 120, 72, 136, 128, 144, 152, 88, 184, -32, 200, -160, 160, -152, 128, -128, 104, -128, 64, -136, 48)

[node name="TimerFlash" type="Timer" parent="."]
wait_time = 0.08

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Area2DCollision" to="." method="_on_area_2d_collision_area_entered"]
[connection signal="body_entered" from="Area2DCollision" to="." method="_on_area_2d_collision_body_entered"]
[connection signal="timeout" from="TimerFlash" to="." method="_on_timer_flash_timeout"]
